changement dans bon sossier

--- a/bootstrap/help.html
+++ b/bootstrap/help.html
@@ -8,21 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!--pour LoL-->
 <!--1-->
-    <link rel="apple-touch-icon" sizes="180x180" href="thp180.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/img/thp180.png">
 <!--2-->
-    <link rel="apple-touch-icon" sizes="120x120" href="thp-precomposed.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="public/img/thp-precomposed.png">
 <!--3-->
-    <link rel="apple-touch-icon" sizes="120x120" href="thp120.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="public/img/thp120.png">
 <!--4-->
-    <link rel="icon" type="image/png" sizes="32x32" href="thp32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/img/thp32.png">
 <!--5-->
-    <link rel="icon" type="image/png" sizes="16x16" href="thp16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/img/thp16.png">
 <!--6-->
-    <link rel="manifest" href="favicon.json">
+    <link rel="manifest" href="public/img/favicon.json">
 <!--7-->
-    <link rel="mask-icon" href="thp.svg" color="#5bbad5">
+    <link rel="mask-icon" href="public/img/thp.svg" color="#5bbad5">
 <!--8-->
-    <link rel="shortcut icon" href="thp.ico">
+    <link rel="shortcut icon" href="public/img/thp.ico">
     
     <script src="https://kit.fontawesome.com/d70a89f18c.js" crossorigin="anonymous"></script>
 
@@ -38,14 +38,14 @@
         crossorigin="anonymous"></script>
     <style>
         .jumbotron {
-            background-image: url("rm.png");
+            background-image: url("public/img/rm.png");
             height: 500px;
             background-position: bottom;
             background-size: cover;
         }
 
         .bgrm {
-            background-image: url("rm.png");
+            background-image: url("public/img/rm.png");
             background-position: bottom;
         }
 
@@ -58,19 +58,19 @@
         }
 
         .bgchauss {
-            background-image: url("chauss.png");
+            background-image: url("public/img/chauss.png");
             background-position: center;
         }
     </style>
     <script>
         function orig() {
-            document.getElementById('bg1').classList.remove("bgchauss");
-            document.getElementById('bg1').classList.add("bgrm");
+            document.getElementById('bg1').classList.remove("public/img/bgchauss");
+            document.getElementById('bg1').classList.add("public/img/bgrm");
         }
 
         function sec() {
-            document.getElementById('bg1').classList.remove("bgrm");
-            document.getElementById('bg1').classList.add("bgchauss");
+            document.getElementById('bg1').classList.remove("public/img/bgrm");
+            document.getElementById('bg1').classList.add("public/img/bgchauss");
         }
     </script>
 </head>
@@ -270,7 +270,7 @@
                     <h1 class="text-center pb-4">&lt;img&gt;</h1>
                     <div class="card-deck">
                         <div class="card mb-4">
-                            <img class="card-img-top" src="rm.png" alt="van">
+                            <img class="card-img-top" src="public/img/rm.png" alt="van">
                             <div class="card-body position-relative">
                                 <p class="card-text mb-5">
                                     &lt;img src="" alt=""&gt;</p>
@@ -279,7 +279,7 @@
                             </div>
                         </div>
                         <div class="card mb-4">
-                            <img class="w100p" src="chauss.png" alt="dessin de chaussures">
+                            <img class="w100p" src="public/img/chauss.png" alt="dessin de chaussures">
                             <div class="card-body position-relative">
                                 <p class="card-text mb-5">
                                     &lt;img style="width: 100%" src="" alt=""&gt;
@@ -297,7 +297,7 @@
 
 </body>
 <footer>
-    <img class="mb-2 ml-2" src="bootstrap-solid.svg" alt="" width="24" height="24"> <sup
+    <img class="mb-2 ml-2" src="public/img/bootstrap-solid.svg" alt="" width="24" height="24"> <sup
         style="top: -15px;">&copy;</sup> Bootstrap<sup>&copy;</sup>, The Surfing Progect, et Moi.</img>
 </footer>
 
