--- a/bootstrap/help.html
+++ b/bootstrap/help.html
@@ -64,13 +64,13 @@
     </style>
     <script>
         function orig() {
-            document.getElementById('bg1').classList.remove("public/img/bgchauss");
-            document.getElementById('bg1').classList.add("public/img/bgrm");
+            document.getElementById('bg1').classList.remove("bgchauss");
+            document.getElementById('bg1').classList.add("bgrm");
         }
 
         function sec() {
-            document.getElementById('bg1').classList.remove("public/img/bgrm");
-            document.getElementById('bg1').classList.add("public/img/bgchauss");
+            document.getElementById('bg1').classList.remove("bgrm");
+            document.getElementById('bg1').classList.add("bgchauss");
         }
     </script>
 </head>
