--- a/bootstrap/help.html
+++ b/bootstrap/help.html
@@ -18,7 +18,7 @@
 <!--5-->
     <link rel="icon" type="image/png" sizes="16x16" href="public/img/thp16.png">
 <!--6-->
-    <link rel="manifest" href="public/img/favicon.json">
+    <link rel="manifest" href="public/json/favicon.json">
 <!--7-->
     <link rel="mask-icon" href="public/img/thp.svg" color="#5bbad5">
 <!--8-->
