--- a/J5/cv.html
+++ b/J5/cv.html
@@ -3,8 +3,8 @@
 <title>Curriculum Vitæ</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/x-icon" href="public/img/ptitspoid.png">
-<link rel="stylesheet" href="public/css/cv.css">
+<link rel="shortcut icon" type="image/x-icon" href="https://jplemonias.github.io/moi/public/img/ptitspoid.png">
+<link rel="stylesheet" href="https://jplemonias.github.io/moi/public/csscv.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script type="application/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
@@ -60,7 +60,7 @@
 
         <div class="w3-white w3-text-grey w3-card-4" style="height: 100%;border-radius: 30px 30px 5px 5px;">
           <div class="w3-display-container">
-            <img src="public/img/avatar2.png" style="width:100%; border-radius: 30px 30px 0px 0px;" alt="Avatar">
+            <img src="https://jplemonias.github.io/moi/public/img/avatar2.png" style="width:100%; border-radius: 30px 30px 0px 0px;" alt="Avatar">
             <div class="w3-display-bottomleft w3-container w3-text-black">
               <h2 style="font-size: 26px; margin:0 0 31px 0; text-shadow: 2px 2px 2px white;">Jean-Paul<br>LEMONIAS</h2>
             </div>
