--- a/J5/cv.html
+++ b/J5/cv.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/x-icon" href="https://jplemonias.github.io/moi/public/img/ptitspoid.png">
-<link rel="stylesheet" href="https://jplemonias.github.io/moi/public/csscv.css">
+<link rel="stylesheet" href="https://jplemonias.github.io/moi/public/css/csscv.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script type="application/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
