--- a/tmfp/better.html
+++ b/tmfp/better.html
@@ -71,7 +71,7 @@
     <p>Inspired by the geniuses behind <a href="https://jplemonias.github.io/thp/tmfp/">motherfuckingwebsite.com</a> and <a
             href="http://txti.es">txti</a>.</p>
     <p>This page—that isn't a total fucking eyesore—was created by <a href="https://twitter.com/JeanPau39876052">Me</a> with
-        help from <a href="https://twitter.com/charles_fr1718"TheHackingProject</a>.
+        help from <a href="https://twitter.com/charles_fr1718">TheHackingProject</a>.
     </p>
 </body>
 
