--- a/tmfp/better.html
+++ b/tmfp/better.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>THP Better Motherfucking Website</title>
+    <title>THP - Better Motherfucking Website</title>
     <style type="text/css">
         body {
             margin: 40px auto;
