--- a/tmfp/best.html
+++ b/tmfp/best.html
@@ -47,7 +47,7 @@
     </ul>
     <h2>Well guess what, motherfucker:</h2>
     <p>This website is even better than the last <a href="http://bettermotherfuckingwebsite.com">guy</a> and the <a
-            href="http://motherfuckingwebsite.com/">guy before him</a>.</p>
+            href="https://jplemonias.github.io/thp/tmfp/">guy before him</a>.</p>
     <p>Why?</p>
     <ul>
         <li>It's over a <a href="https://en.wikipedia.org/wiki/HTTPS">secure connection</a> - so nobody can spy what
@@ -113,9 +113,9 @@
     <p>That's not entirely true, look at that <span class="mfw">motherfuckingwebsite</span>. It's so minimal that it can
         be considered crap.</p>
     <h2>Epilogue</h2>
-    <p>Actually this website was made to follow the trend of the <a href="http://motherfuckingwebsite.com/"><span
+    <p>Actually this website was made to follow the trend of the <a href="https://jplemonias.github.io/thp/tmfp/"><span
                 class="mfw">motherfuckingwebsite</span></a> and the <a
-            href="http://bettermotherfuckingwebsite.com/"><span class="mfw">bettermotherfuckingwebsite</span></a>.</p>
+            href="https://jplemonias.github.io/thp/tmfp/better.html"><span class="mfw">bettermotherfuckingwebsite</span></a>.</p>
     <p>Despite what was said here they're beautiful and truly among the best websites on the internet (even though this
         is still <span class="mfw">thebestmotherfuckingwebsite</span>), so go check 'em out.</p>
     <p>Seriously, follow some of the advice we gave you, they'll "make the web great again" <span class="citneed">Cit.
