--- a/img/octocatssvg.html
+++ b/img/octocatssvg.html
@@ -1,5 +1,5 @@
 <svg version="1.1" id="octocat" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-    y="0px" viewBox="0 0 2000 2000" enable-background="new 0 0 2000 2000" xml:space="preserve" 
+    y="0px" viewBox="0 0 2000 2000" enable-background="new 0 0 2000 2000" xml:space="preserve" width="250" height="250"
     body-color="#52467A" body-color-secondary="#9DA2C9" body-color-teriary="#D6BCA5" body-color-accent="#814B41"
     eye-color="#A34F3E" hair-color="#0" face-hair-color="#9F592A" class="hide-hand">
 
