--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Notre Google</title>
+    <title>The Surfing Project</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="public/img/bootstrap-solid.svg" rel="shortcut icon">
