--- a/J5/index.html
+++ b/J5/index.html
@@ -244,31 +244,31 @@
             <div id="hive" class="vignettes">
                 <div class="hex-cell"><img class="imgHive" onclick="onClick(this)" alt="Rue Saint-Laurent"
                         oncontextmenu="return false" onmousedown="return false"
-                        src="https://scontent-mrs2-2.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/69214340_437447796865230_7722286184549352147_n.jpg?_nc_ht=scontent-mrs2-2.cdninstagram.com&_nc_cat=106&_nc_ohc=XpyQaLyWG4cAX_-Gd86&oh=45866dfb03d8abc3fe9a1639cb91a6a2&oe=5ED8E85C">
+                        src="../../moi/public/img/SaintL.jpg">
                 </div>
                 <div class="hex-cell"><img class="imgHive" onclick="onClick(this)" alt="La Bastille"
                         oncontextmenu="return false" onmousedown="return false"
-                        src="https://scontent-mrs2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/69099063_418104738815327_8913744291706338658_n.jpg?_nc_ht=scontent-mrs2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=Ndq4ITrDXvAAX_02kp1&oh=c611a44a526b3542ae9e88e5468632c3&oe=5ED3A74D">
+                        src="../../moi/public/img/bullesB.jpg">
                 </div>
                 <div class="hex-cell"><img class="imgHive" onclick="onClick(this)" alt="MC²: Maison de la Culture"
                         oncontextmenu="return false" onmousedown="return false"
-                        src="https://scontent-mrs2-2.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/69553316_937868303256991_5559877357789259839_n.jpg?_nc_ht=scontent-mrs2-2.cdninstagram.com&_nc_cat=107&_nc_ohc=LUQK8TCQOxUAX_N8_U3&oh=46da3f2e706fb4217e8f0b88c1cfbbe1&oe=5EC33E61">
+                        src="../../moi/public/img/MC2.jpg">
                 </div>
                 <div class="hex-cell"><img class="imgHive" onclick="onClick(this)" alt="1.2..3... textes"
                         oncontextmenu="return false" onmousedown="return false"
-                        src="https://scontent-mrs2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/66106303_365149037720432_1075803235121459111_n.jpg?_nc_ht=scontent-mrs2-1.cdninstagram.com&_nc_cat=108&_nc_ohc=xqEtAYDcMJ0AX8abm9J&oh=26f5c53604dd5e5163984acfd0903038&oe=5ED8B6CF">
+                        src="../../moi/public/img/text.jpg">
                 </div>
                 <div class="hex-cell"><img class="imgHive" onclick="onClick(this)" alt="Qui es?"
                         oncontextmenu="return false" onmousedown="return false"
-                        src="https://scontent-mrs2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/69645643_447042179502411_1109652311207328199_n.jpg?_nc_ht=scontent-mrs2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=FzAizKPWn84AX-aL7Rf&oh=43e45572c60b24dc7565b80eabfd8fa0&oe=5ED798E9">
+                        src="../../moi/public/img/MC.jpg">
                 </div>
                 <div class="hex-cell"><img class="imgHive" onclick="onClick(this)" alt="Street Art"
                         oncontextmenu="return false" onmousedown="return false"
-                        src="https://scontent-mrs2-2.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/66675879_157778465360017_3874226051628043580_n.jpg?_nc_ht=scontent-mrs2-2.cdninstagram.com&_nc_cat=101&_nc_ohc=mHn-FiyEKIYAX-e8JCu&oh=f5ce3b63ef06fac7af6cb96f6a360937&oe=5ED44429">
+                        src="../../moi/public/img/streetart.jpg">
                 </div>
                 <div class="hex-cell"><img class="imgHive" onclick="onClick(this)" alt="404 Gaming & Drinks"
                         oncontextmenu="return false" onmousedown="return false"
-                        src="https://scontent-mrs2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/70946652_167929570925859_726448088344891296_n.jpg?_nc_ht=scontent-mrs2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=Edi9Tbp1HIoAX8-My1n&oh=e0c798858255a5de9856f673b6dca4ce&oe=5ED1D866">
+                        src="../../moi/public/img/404.jpg">
                 </div>
             </div>
         </div>
